[package]
name        = "forest"
version     = "0.2.2"
authors     = ["ChainSafe Systems <info@chainsafe.io>"]
description = "Filecoin implementation in Rust. This command will start the daemon process."
edition     = "2021"

[dependencies]
anyhow                 = "1.0.64"
async-log              = "2.0"
async-std              = { version = "1.12", features = ["attributes", "tokio1"] }
base64                 = "0.13"
byte-unit              = "4.0"
chrono                 = "0.4"
cid                    = { version = "0.8", default-features = false, features = ["std"] }
ctrlc                  = "3.2"
daemonize-me           = "2.0"
directories            = "4.0.1"
forest_actor_interface = "0.1.0"
forest_auth            = "0.1.0"
forest_beacon          = "0.1.0"
forest_blocks          = "0.1.0"
forest_chain           = "0.1.0"
forest_chain_sync      = "0.1.0"
forest_crypto          = { version = "0.5" }
forest_db              = "0.1"
forest_deleg_cns       = { version = "0.1.0", optional = true }
forest_encoding        = "0.2"
forest_fil_cns         = { version = "0.1.0", optional = true }
forest_fil_types       = "0.2"
forest_genesis         = "0.1.0"
forest_interpreter     = "0.1.0"
forest_ipld_blockstore = "0.1"
forest_json            = "0.1.0"
forest_key_management  = "0.1.0"
forest_libp2p          = "0.1.0"
forest_message         = { version = "0.7", features = ["blst"] }
forest_message_pool    = "0.1.0"
forest_metrics         = "0.1.0"
forest_net_utils       = "0.1.0"
forest_networks        = "0.1.0"
forest_paramfetch      = "0.1.0"
forest_rpc             = "0.1.0"
forest_rpc-api         = "0.1.0"
forest_rpc-client      = "0.1.0"
forest_state_manager   = "0.1.0"
forest_statediff       = "0.1.0"
forest_utils           = "0.1.0"
forest_vm              = "0.3"
futures                = "0.3"
fvm                    = "1.1"
fvm_ipld_car           = "0.5.0"
fvm_ipld_encoding      = "0.2"
fvm_shared             = { version = "0.8.0", default-features = false }
git-version            = "0.3"
hex                    = "0.4"
lazy_static            = "1.4"
libp2p                 = { version = "0.46", default-features = false, features = ["identify"] }
log                    = "0.4"
multibase              = "0.9"
num-rational           = "0.4"
num-traits             = "0.2"
once_cell              = "1.14"
pbr                    = "1.0.4"
pretty_env_logger      = "0.4"
prometheus             = { version = "0.13", features = ["process"] }
raw_sync               = "0.1"
rayon                  = "1.5"
reqwest                = { version = "0.11", features = ["stream"] }
rpassword              = "7.0"
rug                    = "1.17"
rust-s3                = "0.32.3"
serde                  = { version = "1.0", features = ["derive"] }
serde_json             = "1.0"
sha2                   = "0.10.5"
shared_memory          = "0.12"
strfmt                 = "0.2.2"
structopt              = "0.3"
tempfile               = "3.3"
ticker                 = "0.1"
time                   = "0.3"
tokio                  = { version = "1.21", features = ["sync"] }
toml                   = "0.5"
uuid                   = { version = "1.1", features = ["v4"] }


[dependencies.jsonrpc-v2]
default-features = false
features         = ["easy-errors", "macros", "bytes-v05"]
version          = "0.11"

[dev-dependencies]
assert_cmd        = "2"
quickcheck        = "1"
quickcheck_macros = "1"
rand              = "0.8"

[features]
default          = ["forest_fil_cns"]
insecure_post    = ["forest_fil_cns/insecure_post"]
testnet          = []
release          = []
forest_fil_cns   = ["dep:forest_fil_cns"]
forest_deleg_cns = ["dep:forest_deleg_cns"]
