[package]
name = "forest_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["test_constructors"]

[dependencies]
const_format = "0.2.26"

anyhow.workspace           = true
isahc.workspace            = true
log.workspace              = true
pbr.workspace              = true
pin-project-lite.workspace = true
thiserror.workspace        = true
tokio-util                 = { version = "0.7.0", features = ["compat", "io-util"] }
tokio.workspace            = true
url.workspace              = true

serde.workspace = true
digest                     = "0.10.5"
libc                       = "0.2"
toml                       = "0.5"


[dev-dependencies]
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true

serde_derive = "1.0"
sha2         = { version = "0.10", default-features = false }
tokio        = { workspace = true, features = ["macros", "rt"] }