[package]
name = "forest-interop-tests"
version = "0.1.0"
authors = ["ChainSafe Systems <forest@chainsafe.io>"]
repository = "https://github.com/ChainSafe/forest"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Interop tests for Forest."
publish = false

[dependencies]

[dev-dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
flume = { workspace = true }
forest = { package = "forest-filecoin", path = "../", default-features = false, features = [
  "interop-tests-private",
  "no-f3-sidecar",
] }
futures = { workspace = true }
libp2p = { workspace = true, features = [
  'kad',
  'identify',
  'noise',
  'yamux',
  'tcp',
  'tokio',
  'macros',
  'serde',
  'rsa',
  'ecdsa',
  'ed25519',
  'secp256k1',
] }
libp2p-swarm-test = { workspace = true }
multihash-codetable = { workspace = true }
rust2go = { workspace = true }
tokio = { workspace = true, features = ['full'] }

[build-dependencies]
rust2go = { workspace = true, features = ["build"] }

# https://doc.rust-lang.org/stable/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Avoid generating any debug information for dependencies
debug = false
# Speed up debug tests and codecov tests
opt-level = 1

[profile.dev.package."forest-filecoin"]
debug = "line-tables-only"
split-debuginfo = "unpacked"
opt-level = 0
