[package]
name        = "forest_ipld"
description = "Interplanetary linked data types and implementation"
version     = "0.1.1"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>"]
edition     = "2021"
repository  = "https://github.com/ChainSafe/forest"

[dependencies]
anyhow.workspace          = true
async-recursion           = "1.0"
async-trait               = "0.1"
cid                       = { version = "0.8", default-features = false, features = ["std"] }
forest_encoding.workspace = true
fvm_ipld_encoding         = "0.2"
fvm_shared                = { version = "0.8.0", default-features = false }
indexmap                  = { version = "1.9", features = ["serde-1"] }
libipld                   = { version = "0.14", default-features = false, features = ["dag-cbor", "dag-json", "derive"] }
libipld-core              = { version = "0.14", features = ["serde-codec"] }
libipld-macro             = { version = "0.14" }
multibase                 = { version = "0.9" }
serde                     = { workspace = true, features = ["derive"] }
thiserror.workspace       = true

[dev-dependencies]
async-std                        = { workspace = true, features = ["attributes"] }
forest_db.workspace              = true
forest_ipld_blockstore.workspace = true
forest_json.workspace            = true
multihash                        = { version = "0.16.3", features = ["identity"] }
serde_json.workspace             = true
