[package]
name = "forest_ipld"
description = "Interplanetary linked data types and implementation"
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-recursion = "1.0"
async-trait.workspace = true
blake3.workspace = true
cid.workspace = true
forest_db.workspace = true
fs_extra.workspace = true
fvm_ipld_encoding.workspace = true
fvm_shared = { workspace = true, default-features = false }
human-repr.workspace = true
indexmap.workspace = true
libipld-core = { workspace = true, features = ["serde-codec"] }
libipld-macro.workspace = true
libipld.workspace = true
log.workspace = true
md5 = "0.7"
multibase.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
forest_json.workspace = true
forest_utils.workspace = true
multihash = { workspace = true, default-features = false, features = ["identity"] }
quickcheck.workspace = true
quickcheck_macros.workspace = true
serde_json.workspace = true
tokio.workspace = true
