[package]
name = "forest_networks"
license.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
anyhow.workspace = true
cid.workspace = true
const-str = "0.5.4"
fil_actors_shared.workspace = true
forest_beacon.workspace = true
forest_shim.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
strum_macros = "0.24"
url.workspace = true

[dev-dependencies]
multiaddr = "0.17.1"
