[package]
name = "node"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
network = { path = "network" }
ferret-libp2p = { path = "ferret-libp2p"}
utils = { path = "utils" }
db = { path = "db" }

libp2p =  { git = "https://github.com/SigP/rust-libp2p", rev = "776d13ef046358964c7d64cda3295a3a3cb24743" }
tokio = "0.1.22"
futures = "0.1.29"
clap = "2.33.0"
serde = "1.0"
log = "0.4.8"
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.2"
serde_derive = "1.0"
