[package]
name = "node"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
ferret-libp2p = { path = "ferret-libp2p"}
utils = { path = "utils" }
db = { path = "db" }

libp2p = "0.15.0"
futures = "0.3.1"
clap = "2.33.0"
serde = "1.0"
log = "0.4.8"
slog = "2.5.2"
slog-async = "2.3.0"
slog-term = "2.4.2"
serde_derive = "1.0"
async-std = { version = "1.4.0", features = ["attributes"] }