[package]
name = "paych"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
async-std = "1.6.0"
actor = {path = "../vm/actor"}
address = { package = "forest_address", path = "../vm/address" }
encoding = { package = "forest_encoding", path = "../encoding", version = "0.1" }
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
state_manager = {package = "state_manager", path = "../blockchain/state_manager" }
blockstore = { package = "ipld_blockstore", path = "../ipld/blockstore/" }
cid = { package = "forest_cid", path = "../ipld/cid" }