[package]
name = "paych"
version = "0.1.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"

[dependencies]
async-std = "1.6.0"
actor = {path = "../vm/actor"}
address = { package = "forest_address", path = "../vm/address" }
encoding = { package = "forest_encoding", path = "../encoding", version = "0.1" }
thiserror = "1.0.20"
serde = { version = "1.0", features = ["derive"] }
state_manager = {package = "state_manager", path = "../blockchain/state_manager" }
blockstore = { package = "ipld_blockstore", path = "../ipld/blockstore/" }
cid = { package = "forest_cid", path = "../ipld/cid" }
num-bigint = { path = "../utils/bigint", package = "forest_bigint" }
uuid = {version = "0.8", features = ["serde", "v4"]}
log = "0.4.8"
derive_builder = "0.9"
flo_stream = "0.4.0"
chain = { path = "../blockchain/chain"}
message = { package = "forest_message", path = "../vm/message" }
crypto = { package = "forest_crypto", path = "../crypto" }

[dev-dependencies]
futures = "0.3.5"