[package]
name = "forest_fil_types"
description = "Filecoin types used in Forest."
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2021"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
anyhow.workspace = true
filecoin-proofs-api = { workspace = true, default-features = false }
fvm_ipld_encoding.workspace = true
fvm_shared = { workspace = true, default-features = false }

[dev-dependencies]
