[package]
name        = "forest_vm"
description = "Forest VM types"
license     = "MIT OR Apache-2.0"
version     = "0.3.1"
authors     = ["ChainSafe Systems <info@chainsafe.io>"]
edition     = "2021"
repository  = "https://github.com/ChainSafe/forest"

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
serde_ipld_dagcbor = "0.2"
fvm_shared         = { version = "0.8", default-features = false }
fvm_ipld_encoding  = "0.2"
fvm                = "1.1"
forest_encoding    = "0.2"
serde              = { version = "1.0", features = ["derive"] }
num-traits         = "0.2"
num-derive         = "0.3"
thiserror          = "1.0"
lazy_static        = "1.4"
cid                = { version = "0.8", default-features = false, features = ["std"] }

[features]
json = []
