[package]
name        = "forest_vm"
description = "Forest VM types"
license     = "MIT OR Apache-2.0"
version     = "0.3.1"
authors     = ["ChainSafe Systems <info@chainsafe.io>"]
edition     = "2021"
repository  = "https://github.com/ChainSafe/forest"

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
cid                = { version = "0.8", default-features = false, features = ["std"] }
forest_encoding    = "0.2"
forest_json        = "0.1.0"
fvm                = "1.1"
fvm_ipld_encoding  = "0.2"
fvm_shared         = { version = "0.8", default-features = false }
lazy_static        = "1.4"
num-derive         = "0.3"
num-traits         = "0.2"
serde              = { version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.2"
thiserror          = "1.0"
