[package]
name        = "forest_vm"
description = "Forest VM types"
license     = "MIT OR Apache-2.0"
version     = "0.4.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>"]
edition     = "2021"
repository  = "https://github.com/ChainSafe/forest"

[package.metadata.docs.rs]
features = ["json"]

[dependencies]
cid                         = { workspace = true, default-features = false, features = ["std"] }
forest_encoding.workspace   = true
forest_json.workspace       = true
fvm.workspace               = true
fvm_ipld_encoding.workspace = true
fvm_shared                  = { workspace = true, default-features = false }
lazy_static.workspace       = true
num-derive.workspace        = true
num-traits.workspace        = true
serde                       = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor          = "0.2"
thiserror.workspace         = true
