[package]
name        = "fil_actor_account_v8"
description = "Builtin account actor for Filecoin (state-only)"
version     = "8.0.0"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
keywords    = ["filecoin", "web3", "wasm"]
repository  = "https://github.com/ChainSafe/forest"

[dependencies]
fil_actors_runtime_v8 = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
fvm_shared            = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
serde                 = { workspace = true }
