[package]
name        = "fil_actor_init_v9"
description = "Builtin init actor for Filecoin"
version     = "9.0.3"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/filecoin-project/builtin-actors"
keywords    = ["filecoin", "web3", "wasm"]

[dependencies]
anyhow                = { workspace = true }
cid                   = { workspace = true, default-features = false, features = ["serde-codec"] }
fil_actors_runtime_v9 = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
fvm_ipld_hamt         = { workspace = true }
fvm_shared            = { workspace = true, default-features = false }
log                   = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
