[package]
name        = "fil_actor_miner_v8"
description = "Builtin miner actor for Filecoin"
version     = "8.0.0"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/filecoin-project/builtin-actors"
keywords    = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow                = { workspace = true }
byteorder             = { workspace = true }
cid                   = { workspace = true, default-features = false, features = ["serde-codec"] }
fil_actors_runtime_v8 = { workspace = true }
fvm_ipld_amt          = { workspace = true, features = ["go-interop"] }
fvm_ipld_bitfield     = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
fvm_ipld_hamt         = { workspace = true }
fvm_shared            = { workspace = true, default-features = false }
itertools             = { workspace = true }
lazy_static           = { workspace = true }
libipld-core          = { workspace = true, features = ["serde-codec"] }
log                   = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
