[package]
name        = "fil_actor_reward_v8"
description = "Builtin reward actor for Filecoin"
version     = "8.0.0"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/ChainSafe/forest"
keywords    = ["filecoin", "web3", "wasm"]

[dependencies]
fil_actors_runtime_v8 = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
fvm_ipld_hamt         = { workspace = true }
fvm_shared            = { workspace = true }
lazy_static           = { workspace = true }
log                   = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
serde                 = { workspace = true }

[dev-dependencies]
num = { workspace = true }
